--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "deps/libtreadmill"]
-	path = deps/libtreadmill
-	url = git://github.com/txus/libtreadmill
+[submodule "deps/libsweeper"]
+	path = deps/libsweeper
+	url = git://github.com/txus/libsweeper.git
