--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: c
-script: sudo apt-get install valgrind && make valgrind
+script: sudo apt-get install valgrind libblocksruntime-dev && make valgrind
 compiler: clang
